<resources>
    <string name="app_name">UTS_28098</string>

    <string name="Youtube1">
        <a href="https://youtu.be/bgIUdb-7Rqo">Tutorial Perpindahan Button</a>
    </string>

    <string name="Youtube2">
    <a href="https://www.youtube.com/watch?v=lF5m4o_CuNg">Tutorial Login Activity</a>
    </string>

    <string name="Youtube3">
        <a href="https://www.youtube.com/watch?v=IauxP5xgu_s&amp;list=PLwQLA73lSe1RfjMzbRLoIkcIJBu25FnVJ&amp;index=2">Tutorial Pasang Lagu</a>
    </string>

    <string name="Youtube4">
        <a href="https://www.youtube.com/watch?v=1xRC1DMWg9I">Tutorial Pop Up Button</a>
    </string>

    <string name="nama">Muhammad Rezalutfi</string>
    <string name="nim">00000028098</string>
    <string name="kelas">DL</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
