<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/BtnkeHome"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/abc_vector_test" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="138dp"
                android:layout_height="180dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/profile" />

            <TextView
                android:id="@+id/nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/nama"
                android:textColor="#ffffff"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/nim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/nim"
                android:textColor="#ffffff"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/kelas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/kelas"
                android:textColor="#ffffff"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/referensi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Referensi:"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/yutub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Youtube:"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sumberyutup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Youtube1" />

            <TextView
                android:id="@+id/sumberyutup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Youtube2" />

            <TextView
                android:id="@+id/sumberyutup3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Youtube3" />

            <TextView
                android:id="@+id/sumberyutup4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Youtube4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\nTeman:"
                android:textColor="#ffffff"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>